--- a/client/vite-project/src/components/Home Footer/Footer.css
+++ b/client/vite-project/src/components/Home Footer/Footer.css
@@ -91,6 +91,11 @@
   font-weight: bold;
 }
 
+.footer-link{
+  color: white;
+  text-decoration: none;
+}
+
 @media (max-width: 900px) {
   .footer-row {
     flex-direction: column;
