--- a/client/vite-project/src/components/AdminPage/AdminPage.css
+++ b/client/vite-project/src/components/AdminPage/AdminPage.css
@@ -12,8 +12,8 @@
     position: absolute;
     top: 65px;
     left: 261px;
-  background: linear-gradient(245deg, #0f2027, #2c5364);
-    color: white;
+    /* background: linear-gradient(245deg, #0f2027, #2c5364); */
+    color: black;
 }
 
 .admin-heading {
@@ -28,18 +28,31 @@
 
 .horizontal-line {
     border: none;
-    border-top: 2px solid white;
+    border-top: 2px solid black;
     margin: 0 30px 30px 30px;
     height: 0;
 }
+
 .admin-welcome {
     text-align: center;
     margin-bottom: 20px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: white;
 }
-
+.admin-card {
+    margin: 20px;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 2px 8px rgba(60, 60, 60, 0.06);
+}
 .admin-settings {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+.admin-page .admin-card {
+    background: linear-gradient(245deg, #0f2027, #2c5364);
 }
