--- a/client/vite-project/src/components/NavBar/NavBar.css
+++ b/client/vite-project/src/components/NavBar/NavBar.css
@@ -11,7 +11,8 @@
   z-index: 1000;
   width: 100vw;
   background: linear-gradient(195deg, #0f2027, #2c5364);
-  color: #fff;
+  /* background-color: white; */
+  color: white;
   display: flex;
   align-items: center;
   padding: 0 32px;
@@ -20,11 +21,11 @@
 }
 
 .navbar-brand a {
-  color: #fff;
+  color: white;
   font-size: 1.7rem;
   font-weight: 700;
   text-decoration: none;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
 }
 
 .navbar-menu {
@@ -32,15 +33,14 @@
   display: flex;
   gap: 24px;
   margin: 0;
-  padding: 0 24px;
+  padding: 0 25px;
   flex: 1;
   align-items: center;
 }
 
 .navbar-menu li a {
-  color: #bfdded;
+  color: white;
   text-decoration: none;
-  text-decoration: underline;
   text-decoration-color: rgba(20, 4, 100, 0.432);
   font-size: 1.1rem;
   transition: color 0.2s;
@@ -49,6 +49,7 @@
 .navbar-menu li a:hover {
   color: #21b2f1;
   background-color: linear-gradient(195deg, #0f2027, #2c5364);
+  text-decoration: underline;
 }
 
 .navbar-auth {
